rgw: when resharding store progress json only when both verbose and out are specified.

Fixes: https://tracker.ceph.com/issues/42051

Signed-off-by: Mark Kogan <mkogan@redhat.com>